force-app/main/default/objects/GTM_Offering_Feedback__c/GTM_Offering_Feedback__c.object-meta.xml
<CustomObject>
    <description>A note from someone selling an offering to the people who write it. Named GTM_ rather than MA_ because feedback is a framework concept: every offering gets it, not just Migration Accelerator.</description>
    <label>Offering Feedback</label>
    <pluralLabel>Offering Feedback</pluralLabel>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>