force-app/main/default/objects/GTM_Offering_Feedback__c/fields/Answered_At__c.field-meta.xml
<CustomField>
    <fullName>Answered_At__c</fullName>
    <description>When the writer last replied, so "waiting on you" and "waiting on them" can be told apart.</description>
    <label>Answered At</label>
    <type>DateTime</type>
</CustomField>