force-app/main/default/objects/GTM_Offering_Feedback__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>What they said, in their words.</description>
    <label>Feedback</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>