force-app/main/default/objects/GTM_Offering_Feedback__c/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <description>Which offering this is about. The key rather than a lookup, because offerings are custom metadata, not records.</description>
    <label>Offering</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>