force-app/main/default/objects/GTM_Offering_Feedback__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>The writer's reply, shown back to whoever left the feedback. Feedback with no reply is a suggestion box nobody empties.</description>
    <label>Response</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>