force-app/main/default/objects/GTM_Offering_Feedback__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <description>Who left it. Stored explicitly rather than read from CreatedById so it survives a record being re-parented, and so the writer can see who to go back to.</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Offering Feedback</relationshipLabel>
    <relationshipName>Offering_Feedback_Submitted</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>