force-app/main/default/objects/GTM_Offering_Feedback__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>The page it is about, when it is about one. Blank means the offering in general, which is the common case.</description>
    <label>Page</label>
    <length>40</length>
    <type>Text</type>
</CustomField>